# KNode5

./: AUTHORS  CMakeLists.txt  Mainpage.dox  aboutdata.cpp  aboutdata.h  articlewidget.cpp  articlewidget.h  kdepim.categories  knaccountmanager.cpp  knapplication.cpp  knapplication.h  knarticle.cpp  knarticle.h  knarticlecollection.cpp  knarticlefactory.cpp  knarticlefactory.h  knarticlefilter.cpp  knarticlefilter.h  knarticlemanager.cpp  knarticlemanager.h  knarticlewindow.cpp  knarticlewindow.h  kncleanup.cpp  kncollection.h  kncollectionview.cpp  kncollectionviewitem.cpp  kncomposer.cpp  kncomposer.h  kncomposereditor.cpp  kncomposereditor.h  kncomposerui.rc  kncomposerview.cpp  kncomposerview.h  knconfig.cpp  knconfig.h  knconfigmanager.cpp  knconfigmanager.h  knconfigpages.cpp  knconfigpages.h  knconfigwidgets.cpp  (+50 more)
composer/: attachment_view.cpp  composer_view.ui
configuration/: identity_combo_wrapper.h  identity_edition_dialog.cpp  identity_edition_dialog.ui  identity_widget.cpp  identity_widget.h  settings_container_interface.h
filters/: 1.fltr  2.fltr  3.fltr  4.fltr  5.fltr  6.fltr  7.fltr  8.fltr  CMakeLists.txt
groupselection/: dialog_base.cpp  dialog_base.h  dialog_base.ui  enums.h  group_selection_dialog.cpp  group_selection_dialog.h  group_subscription_dialog.cpp  group_subscription_dialog.h
groupselection/helper/: group_list_date_picker.cpp  group_list_date_picker.h  group_list_date_picker.ui
groupselection/model/: base_grouping_proxy_model.cpp  base_grouping_proxy_model.h  checked_state_proxy_model.cpp  checked_state_proxy_model.h  filter_group_proxy_model.cpp  filter_group_proxy_model.h  group_model.cpp  group_model.h  selection_grouping_proxy_model.cpp  selection_grouping_proxy_model.h  subscription_grouping_proxy_model.cpp  subscription_grouping_proxy_model.h  subscription_state_proxy_model.cpp  subscription_state_proxy_model.h
icons/: CMakeLists.txt
kconf_update/: CMakeLists.txt  knode.upd
messagelist/: headers_model.cpp  headers_model.h  headers_view.cpp  headers_view.h  headers_widget.cpp  headers_widget.h
messageview/: article_widget.cpp  article_widget.h  csshelper.cpp  instances.cpp  instances.h  knode_error.html
pics/: CMakeLists.txt
tests/: CMakeLists.txt  knodetest.cpp
utils/: locale.cpp  startup.cpp  startup.h
